[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/scenes/runway/runway.gd" type="Script" id=1]
[ext_resource path="res://src/scenes/car/car.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/scenes/background/skyline.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/screens/timer/hud_time.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/screens/return/hud_return.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/screens/timer/hud_timer_step.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/screens/pause/pause.tscn" type="PackedScene" id=7]
[ext_resource path="res://audio/music/BRIDGE (mmaze2).wav" type="AudioStream" id=8]

[node name="runway" type="Node"]

[node name="user_menu" type="CanvasLayer" parent="."]
layer = 100

[node name="pause" parent="user_menu" instance=ExtResource( 7 )]

[node name="skyline" parent="." instance=ExtResource( 3 )]

[node name="runway" type="Node2D" parent="."]
script = ExtResource( 1 )
BORDER = Color( 0.913725, 0.215686, 0.215686, 1 )
RUNWAY = Color( 0.419608, 0.419608, 0.419608, 1 )
DIVID_LINE = Color( 0.8, 0.8, 0.8, 1 )
GRAMME = Color( 0.0627451, 0.666667, 0.0627451, 1 )
STRIPED_RUNWAY = Color( 0.411765, 0.411765, 0.411765, 1 )
STRIPED_BORDER = Color( 0.733333, 0.733333, 0.733333, 1 )
STRIPED_DIVID_LINE = Color( 0.419608, 0.419608, 0.419608, 1 )
STRIPED_GRAMME = Color( 0, 0.603922, 0, 1 )

[node name="car" parent="runway" instance=ExtResource( 2 )]

[node name="music" type="AudioStreamPlayer" parent="runway"]
stream = ExtResource( 8 )
volume_db = -10.0

[node name="hud_time" parent="." instance=ExtResource( 4 )]

[node name="hud_return" parent="." instance=ExtResource( 5 )]

[node name="hud_timer_step" parent="." instance=ExtResource( 6 )]

[node name="timer" type="Timer" parent="."]
wait_time = 0.1

[node name="timer_step" type="Timer" parent="."]
wait_time = 0.1
[connection signal="collision" from="runway/car" to="runway" method="_on_car_collision"]
[connection signal="timeout" from="timer" to="runway" method="_on_timer_finish_line"]
[connection signal="timeout" from="timer_step" to="runway" method="_on_timer_step"]
